# sltop-rs

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-02-python-parity.md
src/: app.rs  cli.rs  lib.rs  main.rs  model.rs  parse.rs  theme.rs  ui.rs
src/slurm/: commands.rs
tests/: parse_reasons.rs  parse_sinfo.rs  parse_squeue.rs  parsing_scontrol.rs  shared.rs
tests/fixtures/: sacctmgr_qos.txt  scontrol_partition.txt  sinfo_empty_partition.txt  sinfo_normal.txt  squeue_normal.txt  squeue_pending_reasons.txt
